Fixed scrollbar showing when lens is off screen

--- a/css/magnify.css
+++ b/css/magnify.css
@@ -1,3 +1,6 @@
+html.magnifying > body {
+  overflow-x: hidden !important;
+}
 .magnify {
   position: relative;
   display: inline-block;
